REFACTOR: Implemented JWT Authentication without authorization server